@@ -1,3 +1,7 @@
+Added power-up Orb type statistics.
+
+*****
+
 1.12.0 (21)
 
 Added new music track for snow, sand, and rock levels.
